--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "delubyo",
   "private": true,
-  "version": "0.1.1",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -24,5 +24,6 @@
     "typescript": "5.7.2",
     "typescript-eslint": "^8.25.0",
     "vite": "^5.1.4"
-  }
+  },
+  "license": "MIT"
 }
